...
      ),
      child: Card(
        color: Colors.white,
        elevation: 04,
        //shadowColor: Colors.transparent,
        child: TextField(
          key: Key("text_field_send_messages"),
          controller: controller,
          keyboardType: TextInputType.multiline,
          style: AppStyles.styleBold13,
          decoration: InputDecoration(
            //keyboardType: TextInputType.multiline,
            hintStyle: AppStyles.styleBold13.copyWith(color: Color(0xffA1A1A1)),
...
